# lubimovka-readers

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
apps/competitions/: admin.py  apps.py  forms.py  mixins.py  models.py  services.py  tests.py  urls.py  views.py
apps/competitions/migrations/: 0001_initial.py  0002_remove_competition_play_link_sheet_column_name_and_more.py  0003_rename_play_author_name_sheet_column_name_competition_play_author_first_name_sheet_column_name_and_m.py  0004_rename_play_author_date_of_birth_sheet_column_name_competition_play_author_year_of_birth_sheet_colum.py  0005_competitionrole_is_active.py  0006_alter_competition_are_phase1_reviews_visible_and_more.py  0007_competition_google_credentials.py
apps/plays/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/plays/migrations/: 0001_initial.py  0002_rename_author_name_play_author_first_name_and_more.py  (+5 more)
apps/reviews/: forms.py  models.py  services.py  tests.py  urls.py  views.py
apps/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
templates/: analytics_dashboard.html  base.html  competition_create.html  competition_detail.html  competition_list.html  competition_update.html  create_update.html  home.html  login.html  play_detail.html  play_list.html  user_create.html  user_detail.html  user_list.html  user_update.html
templates/includes/: navbar.html  review_item.html  review_list.html
(+8 files in other folders)
