[project]
name = "lubimovka-readers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-environ>=0.13.0",
    "gspread>=6.2.1",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.12",
    "pytils>=0.4.4",
    "whitenoise>=6.12.0",
]
